implemented update searchtimer

--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -188,26 +188,31 @@ table {
   max-width: 150px;
   margin-right: 10px;
 }
+
 .channelName {
   display: inline-block;
   max-width: 150px;
   margin-right: 10px;
 }
+
 .genre {
   display: inline-block;
   width: 150px;
   margin-right: 10px;
 }
+
 .category {
   display: inline-block;
   width: 150px;
   margin-right: 10px;
 }
+
 .searchtext {
   display: inline-block;
   width: 160px;
   margin-right: 10px;
 }
+
 .searchtime {
   display: inline-block;
   width: 160px;
@@ -256,25 +261,30 @@ table {
   border-color: LightGrey;
 }
 
-fieldset.scheduler-border {
-  border: 1px groove #ddd;
+.fieldset-border {
+  border: 2px groove #ddd;
   padding: 0 1.4em 1.4em 1.4em;
   margin: 0 0 1.5em 0;
+  border-color: @brand-primary;
 }
-legend.scheduler-border {
+
+.legend-border {
+  border: 2px groove #ddd;
+  padding: 5px;
+  margin: 15px;
   width: inherit;
-  padding: 0 10px;
-  border-bottom: none;
   font-size: 1em;
   font-weight: bold;
+  border-color: @brand-primary;
 }
+
 legend {
   margin-bottom: 0;
 }
+
 .label2 {
   font-weight: bold;
 }
-
 
 [data-grid-property="time"] {
   vertical-align: top;
