--- a/src/main/resources/META-INF/assets/css/includes.less
+++ b/src/main/resources/META-INF/assets/css/includes.less
@@ -1,3 +1,17 @@
+@gray-base:              #000;
+@gray-darker:            lighten(@gray-base, 13.5%); // #222
+@gray-dark:              lighten(@gray-base, 20%);   // #333
+@gray:                   lighten(@gray-base, 33.5%); // #555
+@gray-light:             lighten(@gray-base, 60%);   // #999
+@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+
+@brand-primary:         #2FA4E7;
+@brand-success:         #73A839;
+@brand-info:            #033C73;
+@brand-warning:         #DD5600;
+@brand-danger:          #C71C22;
+
+
 .mapa(@x) {
 	margin: @x;
 	padding: @x;	
