--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.tml
@@ -1,10 +1,10 @@
 <html lang="de" xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd" xmlns:p="tapestry:parameter">
     <t:content>
         <t:zone t:id="searchTimerListZone" id="searchTimerListZone">
-            <t:delegate to="activeBlock" />
+            <t:delegate to="activeBlock" />            
         </t:zone>
 
-        <t:block t:id="view">
+        <t:block t:id="viewBlock">
             <t:grid source="searchTimers" row="searchTimer" include="active,name,type,hits,channels,chformat,expression,expression1,vdrName,directory"
                 add="action">
                 <p:activeCell>
@@ -64,7 +64,7 @@
             </t:eventlink>
         </t:block>
 
-        <t:block t:id="edit">
+        <t:block t:id="editBlock">
             <t:form class="form-horizontal" t:id="timerform" t:zone="^">
                 <div class="container">
                     <div>
@@ -361,6 +361,12 @@
             </t:form>
 
             <t:trigger event="renderZone" />
+        </t:block>
+        
+        <t:block t:id="epgBlock">
+            <div>Hallo EPG</div>
+            
+            <t:eventlink event="back" class="btn btn-default">${message:timer_back}</t:eventlink>
         </t:block>
     </t:content>
 </html>
