preparation for showing search results

--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.tml
@@ -365,6 +365,8 @@
         
         <t:block t:id="epgBlock">
             <div>Hallo EPG</div>
+       
+            <t:SearchTimerResult useIds="searchResult" />
             
             <t:eventlink event="back" class="btn btn-default">${message:timer_back}</t:eventlink>
         </t:block>
